--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
+  "engines":{
+    "node": "10.3.0",
+    "npm": "6.8.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
