--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "serve": "^10.1.2"
   },
-  "engines":{
+  "engines": {
     "node": "10.3.0",
     "npm": "6.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
