--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "serve": "^10.1.2"
+    "react-scripts": "2.1.5"
   },
   "engines": {
     "node": "10.3.0",
@@ -21,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "serve -s build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
